# pytorch-android

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: classes.txt  recycling_locations.csv
app/src/main/java/org/pytorch/demo/objectdetection/: ExploreActivity.java  HomeActivity.java  MainActivity.java  ObjectDetectionActivity.java  PrePostProcessor.java  Recyclables.java  RecyclingMarker.java  ScanActivity.java
app/src/main/java/org/pytorch/demo/objectdetection/fragment/: AbstractMapFragment.java  HomeFragment.java  InfoFragment.java  MapFragment.java
app/src/main/res/drawable/: attention_background.xml  bg_border_with_shadow.xml
app/src/main/res/layout/: activity_explore.xml  activity_home.xml  activity_main.xml  activity_scan.xml  add_marker_popup.xml  home_fragment.xml  information_fragment.xml  no_recyclable_fragment.xml
app/src/main/res/menu/: bottom_navigation.xml
app/src/main/res/mipmap-anydpi-v26/: aluminium.xml  attention.xml  cardboard.xml  plastic_bottle.xml
app/src/main/res/values/: aluminium_background.xml  cardboard_background.xml  plastic_bottle_background.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
python/: pyproject.toml  training.py
